update support chat ui
